--- a/manifest.json
+++ b/manifest.json
@@ -37,5 +37,8 @@
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
+  },
+  
+  "icons": { "64": "icon.png"
   }
 }
